--- a/app/views/attachments/office.html.erb
+++ b/app/views/attachments/office.html.erb
@@ -1,8 +1,8 @@
 <%= render :layout => 'layouts/file' do %>
   <script type="text/javascript">  
-	function resizeObject(obj) {
-	 obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
-	}
+    function resizeObject(obj) {
+      $(obj).height($(obj).contents().outerHeight());
+    }
   </script>
   <%= preview_office_tag @attachment %>
 <% end %>
