fix embedded object height zero issue

--- a/app/views/attachments/office.html.erb
+++ b/app/views/attachments/office.html.erb
@@ -1,7 +1,11 @@
 <%= render :layout => 'layouts/file' do %>
   <script type="text/javascript">  
-    function resizeObject(obj) {
+    function resizeIframe(obj) {
       $(obj).height($(obj).contents().outerHeight());
+    }
+
+    function resizeObject(obj) {
+      $(obj).height($(obj.contentWindow.document).outerHeight());
     }
   </script>
   <%= preview_office_tag @attachment %>
